# YTND

./: .env.example  .gitignore  LICENSE  README.md  egg-ytnd-manager.yaml  pyproject.toml  run.py
flutter_app/: .gitignore  README.md  pubspec.yaml
flutter_app/android/: build.gradle.kts  gradlew.bat  settings.gradle.kts
flutter_app/android/app/: build.gradle.kts
flutter_app/lib/: main.dart
flutter_app/lib/models/: app_settings.dart  download_queue_item.dart  song.dart  sync_summary.dart
flutter_app/lib/screens/: app_shell.dart  download_screen.dart  library_screen.dart  login_screen.dart  queue_screen.dart  settings_screen.dart
flutter_app/lib/services/: api_service.dart  background_sync_service.dart  cover_cache_service.dart  settings_service.dart  share_intent_service.dart  (+3 more)
flutter_app/test/: api_service_test.dart  app_settings_test.dart  app_state_test.dart  cover_cache_service_test.dart  download_queue_item_test.dart  fakes.dart  settings_service_test.dart  shared_url_parser_test.dart  song_model_test.dart  sync_service_test.dart  widget_test.dart
manager-frontend/: index.html  package-lock.json  package.json
manager-frontend/public/: site.webmanifest
manager-frontend/src/: App.tsx  index.css
tests/: conftest.py  test_auth.py  test_bootstrap_and_cli.py  test_cookies_upload.py  test_downloader.py  test_frontend_assets.py  test_manager_diagnostics.py  test_webdav.py  test_ytdlp_support.py
ytnd/: __init__.py  bot.py  cli.py  config.py  database.py  downloader.py  manager_server.py  manager_tokens.py  syncthing_client.py  utils.py  ytdlp_support.py
(+18 files in other folders)
