[project]
name = "ytnd-bot"
version = "1.0.0"
description = "YTND Manager backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "yt-dlp",
    "mutagen",
    "passlib[argon2]",
    "argon2-cffi",
    "python-dotenv",
    "python-multipart",
    "requests",
]

[project.optional-dependencies]
test = [
    "pytest",
    "httpx",
]

[project.scripts]
ytnd-manager = "ytnd.manager_server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ytnd"]

[tool.pytest.ini_options]
testpaths = ["tests"]
